# xstac

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  _types.py  generate-terraclimate.py  generate.py  index.html  pyproject.toml  requirements.dev.txt  setup.cfg  test_xstac.py  xstac.py
.github/workflows/: STACbrowser.yml  continuous-integration.yml  publish.yaml
css/: catalog.72eff2e0.css  chunk-vendors.51c1c9e2.css  item.f1e97330.css  metadata-sidebar.fcfbc03a.css
examples/: daymet-hi-annual-template.json  terraclimate.json
examples/berkeley-earth/: README.md  berkeley-earth-item.json  generate.py  item-template.json
examples/cil-gdpcir/: cil-gdpcir-cc-by-sa.json  cil-gdpcir-cc-by.json  cil-gdpcir-cc0.json  collection.json  generate.py  item.json
examples/daymet/: README.md  catalog.json  collection.json  generate.py
examples/era5/: collection_datacube.json  era5-pds.json  generate.py  item_assets.json
examples/gpm-imerg-hhr/: Notes.md  collection-template.json  collection.json  generate.py
examples/gridmet/: collection-template.json  collection.json
examples/nasa-nex-gddp-cmip6/: collection.json  (+2 more)
js/: app.b5968a13.js  app.b5968a13.js.map  app.e9b90ed9.js  app.e9b90ed9.js.map  app.f998e50c.js  app.f998e50c.js.map  catalog.67abe9c7.js  catalog.67abe9c7.js.map  catalog.c9f41451.js  catalog.c9f41451.js.map  catalog~item.272fb9d8.js  catalog~item.272fb9d8.js.map  catalog~item.8e7dca21.js  catalog~item.8e7dca21.js.map  catalog~item.bd4db01c.js  catalog~item.bd4db01c.js.map  chunk-vendors.0cf01e9c.js  chunk-vendors.0cf01e9c.js.map  chunk-vendors.a45c3413.js  chunk-vendors.a45c3413.js.map  chunk-vendors.df32158c.js  chunk-vendors.df32158c.js.map  item.a601526d.js  item.a601526d.js.map  item.b156fafe.js  item.b156fafe.js.map  metadata-sidebar.009b376d.js  metadata-sidebar.009b376d.js.map  metadata-sidebar.401b349e.js  metadata-sidebar.401b349e.js.map  multiselect.9e42f51a.js  multiselect.9e42f51a.js.map  zarr-metadata-tab.84610f5f.js  zarr-metadata-tab.84610f5f.js.map  zarr-metadata-tab.86231eea.js  zarr-metadata-tab.86231eea.js.map
tests/: conftest.py  test_kerchunk.py  test_xstac.py
xstac/: __init__.py  _generate.py  _kerchunk.py  _types.py  _xstac.py  xstac.py
(+35 files in other folders)
