[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "xstac"
author = "Tom Augspurger"
author-email = "taugspurger@microsoft.com"
classifiers = [ "License :: OSI Approved :: MIT License",]
requires = [
    "xarray",
    "numpy",
    "pystac>=1.0.0b3",
    "pandas",
    "pyproj",
    "pydantic",
    "zarr",
    "jsonschema",
    "dask[array]",  # for chunking
    # these are just for generate
    "fsspec",
    "adlfs",
]

[tool.flit.scripts]
xstac = "xstac._generate:main"

[tool.flit.metadata.requires-extra]
dev = [
  "pytest",
  "pre-commit",
]
